--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,18 @@ dependencies:
   flutter_stripe: ^11.3.0
   intl: ^0.20.1
 
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.14.3"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/vinlab_icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
